fix: readme, gap in box and tex in box

--- a/css/style.css
+++ b/css/style.css
@@ -30,16 +30,17 @@ h1 {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    gap: 15px;
 }
 
 .box {
-    width: 100px;
-    height: 100px;
-    margin: 10px;
+    width: 130px;
+    height: 130px;
+    margin-bottom: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 .number {
